fix alignment

--- a/src/app/components/main/summary/summary.component.scss
+++ b/src/app/components/main/summary/summary.component.scss
@@ -1,5 +1,4 @@
 .content {
-    //background-color: rgba(128, 128, 128, 0.19);
     background-color: #f1f1f1;
 
     .dropdown_container {
@@ -11,47 +10,65 @@
     }
 
     .custom_card {
-        border-radius: 40px;
+        border-radius: 15px;
         background-color: #fff;
         border: none;
-        padding: 20px 20px 0px 20px;
+        padding: 20px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        transition: transform 0.3s;
+        transition: transform 0.3s, box-shadow 0.3s;
 
         &:hover {
-            background-color: #1E3F66;
-            color: #fff;
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+            transform: translateY(-3px);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
         }
 
         .card-body {
             display: flex;
-            flex-wrap: wrap;
+            flex-direction: column;
+            justify-content: space-between;
+            height: 100%;
 
             .icon-placeholder {
                 font-size: 1.8rem;
+                color: #007bff;
             }
 
             .card-title {
                 font-size: 1.2rem;
                 font-weight: 600;
-                margin-bottom: 0.5rem;
+                margin: 0;
+                flex-grow: 1;
             }
 
-            .card-text {
+            .content-left {
+                flex-grow: 1;
+                min-width: 65%;
+                max-width: 65%;
                 font-size: 0.9rem;
-                color: #6c757d;
+                font-weight: 500;
+
+                .card-text {
+                    color: #6c757d;
+                    margin-bottom: 5px;
+                }
             }
 
             .card-score {
-                font-size: 1.5rem;
+                font-size: 2rem;
+                font-weight: bold;
+                color: #007bff;
+                min-width: 15%;
+                text-align: center;
             }
 
             .card-bottom {
-                font-size: 1rem;
+                font-size: 0.9rem;
+                margin-top: auto;
+                font-weight: bold;
             }
         }
     }
+
 }
 
 .card {
@@ -87,7 +104,7 @@
     .custom_card {
         .card-body {
             .icon-placeholder {
-                font-size: 1.2rem; // Adjust icon size for small screens
+                font-size: 1.2rem;
             }
 
             .card-title {
